--- a/style.css
+++ b/style.css
@@ -15,6 +15,26 @@ svg {
 }
 
 * {
-  margin: 0; 
-  /* line-height: calc(1em + 0.5rem); */
+    margin: 0;
+    /* line-height: calc(1em + 0.5rem); */
+}
+
+body {
+    height: 100vh;
+    width: 100vw;
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* justify-content: center; */
+    height: 100%;
+    width: 100%;
+}
+
+.app > canvas {
+    height: 80%;
+    width: 80%;
+    align-self: center;
 }
