--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ svg {
     user-select: none;
 }
 
+button {
+    display: inline-block;
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
 * {
     margin: 0;
     /* line-height: calc(1em + 0.5rem); */
@@ -50,25 +58,52 @@ body {
 
 .tools {
     display: grid;
-    grid-template-rows: 1;
-    grid-template-columns: repeat(10, 1fr);
-    padding-left: 2rem;
-    padding-right: 2rem;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(15, 1fr);
+    /* padding-left: 2rem; */
+    /* padding-right: 2rem; */
+    height: 15vh;
+    width: 80%;
+    align-self: center;
 }
 
 .displayScale {
-
+    border: 0.25rem solid #ccc;
+    display: inline-block;
 }
 
 .increaseScale {
-
+    border: 0.25rem solid #ccc;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .decreaseScale {
 
 }
 
+.btn {
+    display: inline-block;
+    background-color: #3b82f6;
+    padding: 0.5em 1em;
+    /* border-radius: 0.75rem; */
+    font-weight: 600;
+    border: solid 0.25rem black;
+    cursor: pointer;
+
+}
+
 .uploadButton {
     grid-column: span 3;
+}
+
+.uploadButton > p {
+    text-align: center;
+}
+
+.fileUpload {
+    /* grid-column: span 3; */
+    display: none;
+    text-align: center;
 }
 
